fix: alignment of non-image description paragraphs

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -460,6 +460,14 @@ header {
     margin: 0;
 }
 
+.min-h-35 {
+    min-height: 35%;
+}
+
+.min-h-40 {
+    min-height: 40%;
+}
+
 .min-h-70 {
     min-height: 70%;
 }
